css/main.css
body {
	/*font-family: Monospace;*/
	font-family: Helvetica, sans-serif;
	margin: 0;
	background-color: #000;
	color: #fff;
	font-size: 13px;
	line-height: 24px;
	overscroll-behavior: none;
	overflow: hidden;
	-webkit-touch-callout: none; /* iOS Safari */
    -webkit-user-select: none; /* Safari */
     -khtml-user-select: none; /* Konqueror HTML */
       -moz-user-select: none; /* Firefox */
        -ms-user-select: none; /* Internet Explorer/Edge */
            user-select: none; /* Non-prefixed version, currently
                                  supported by Chrome and Opera */
}

.noselect {
  -webkit-touch-callout: none; /* iOS Safari */
    -webkit-user-select: none; /* Safari */
     -khtml-user-select: none; /* Konqueror HTML */
       -moz-user-select: none; /* Firefox */
        -ms-user-select: none; /* Internet Explorer/Edge */
            user-select: none; /* Non-prefixed version, currently
                                  supported by Chrome and Opera */
}


/*canvas {
	display: block;
}*/


/*#info {
	position: absolute;
	top: 0px;
	width: 100%;
	padding: 10px;
	box-sizing: border-box;
	text-align: center;
	-moz-user-select: none;
	-webkit-user-select: none;
	-ms-user-select: none;
	user-select: none;
	pointer-events: none;
	z-index: 1;
}
*/

.dg.ac {
	-moz-user-select: none;
	-webkit-user-select: none;
	-ms-user-select: none;
	user-select: none;
	z-index: 2 !important; /* TODO Solve this in HTML */
}

.element {
	box-sizing: border-box;
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
	cursor: pointer;
	width: 800px;
	height: 800px;
	box-shadow: 0px 0px 12px rgba(80,200,255,0.5);
	border: 1px solid rgba(80,160,208,0.25);
	text-align: center;
	line-height: normal;
-webkit-touch-callout: none; /* iOS Safari */
-webkit-user-select: none; /* Safari */
-khtml-user-select: none; /* Konqueror HTML */
-moz-user-select: none; /* Firefox */
-ms-user-select: none; /* Internet Explorer/Edge */
    user-select: none; /* Non-prefixed version, currently supported by Chrome and Opera */
}

.element:hover {
	box-shadow: 0px 0px 12px rgba(80,200,255,0.8);
	border: 1px solid rgba(80,140,255,0.8);
}

	.element .number {
		position: absolute;
		top: 20px;
		right: 20px;
		font-size: 0px;
		color: rgba(80,160,255,0.75);
	}

	.element .year {
		position: absolute;
		top: 40px;
		left: 0px;
		right: 0px;
		font-size: 60px;
		font-weight: bold;
		color: rgba(255,255,255,0.75);
		text-shadow: 0 0 10px rgba(80,120,255,0.95);
	}

	.element .details {
		padding: 40px;
		position: absolute;
		top: 100px;
		left: 0px;
		right: 0px;
		font-size: 22px;
		color: rgba(100,160,255,0.75);
	}

	.element img {
		margin-top: 100px;
		max-width: 500px;
		/*max-height: 90%;*/
	}

a {
	color: #8ff;
	/*color: #ff0;*/
	text-decoration: none;
}

a:hover {
	text-decoration: underline;
}

a, button, input, select {
	pointer-events: auto;
}

#dashboard.mobile {
	transform: scale(1);
}

#dashboard {
	transform: rotate(-2deg);
	position: absolute;
	border: 4px solid rgba(20,20,20,0.5);
	box-shadow: inset 0 0 10px 4px rgba(10,10,10,0.8);
	bottom: 1%;
	right: 1%;
	width: 21em;
	height: 21em;
	border-radius: 50%;
	background: #283446; /* Fallback */
	background: linear-gradient(#36455b, #283446);
/*	-webkit-transition: all .5s ease;
	transition: all .5s ease;*/
}

button {
	font-family: Helvetica;
	border-radius: 1px;
	text-transform: uppercase;
	box-sizing: border-box;
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
	cursor: pointer;
	background: #283446; /* Fallback */
	background: linear-gradient(#36455b, #283446);
	color: rgba(220,220,220,0.75);
	border: 1px solid rgba(20,20,20,0.5);
	margin: 5px;
	outline: none;
	font-size: 95%;
}

/*#datatypes .datatype:hover,*/
button:hover {
	box-shadow: 0px 0px 5px rgba(80,180,255,0.6);
	border: 1px solid rgba(20,20,20,0.8);
	color: rgba(220,220,220,0.9);
}

/*#datatypes .datatype:active,*/
button:active {
	color: #FFFFFF;
	box-shadow: 0px 0px 5px rgba(80,180,255,1);
	border: 1px solid rgba(20,20,20,1);
}

#buttons, #datatypes {
	position: absolute;
	width: 100%;
	text-align: center;
}

#buttons {
	top: 0%;
}

#line {
	transform: translate(5px,60px) rotate(-55deg);
}
#sphere {
	transform: translate(-5px,20px) rotate(-15deg);
}
#helix {
	transform: translate(5px,20px) rotate(15deg);
}
#grid {
	transform: translate(-5px,60px) rotate(55deg);
}

#svg-dash {
	/*visibility: hidden;*/
	overflow: visible;
	position: absolute;
	margin-left: -63px;
	margin-top: 10px;
}

#datatypes {
	bottom: 20%;
}

#datatypes .datatype {
	display: inline-block;
	font-size: 60%;
	cursor: pointer;
	text-transform: uppercase;
	box-sizing: border-box;
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
/*	color: rgba(80,120,220,0.75);
	background: transparent;
	outline: 1px solid rgba(80,120,220,0.15);
	border: 0px;*/
	/*background: #283446; /* Fallback */
	/*background: linear-gradient(#36455b, #283446);*/
	color: rgba(220,220,220,0.6);
	/*outline: 1px solid rgba(20,20,20,0.3);*/
	padding: 2px;
	width: 28px;
}

/*#adsb-switch {
	margin-top: -70px;
	margin-left: -135px;
}
#ais-switch {
	margin-top: -70px;
	margin-left: -135px;
}
#gnssro-switch {
	margin-top: -70px;
	margin-left: -135px;
}
#ism-switch {
	margin-top: -70px;
	margin-left: -135px;
}
#mag-switch {
	margin-top: -70px;
	margin-left: -135px;
}
#tec-switch {
	margin-top: -70px;
	margin-left: -135px;
}*/

#menu_icon {
	cursor: pointer;
	position: absolute;
	top: 10px;
	left: 10px;
	height: 40px;
	width: 40px;
	font-size: 30px;
	text-align: center;
	border-radius: 50%;
	/*border: 2px solid rgba(80,120,220,0.75);*/
	color: rgba(80,120,220,0.75);
	z-index: 10;
}

#menu_icon:hover {
	color: rgba(100,140,240,0.85);
	/*background-color: rgba(40,80,200,0.5);*/
}

#menu_icon:active {
	color: rgba(255,255,255,1.0);
	transform: rotate(90deg);
	/*background-color: rgba(40,80,240,0.5);*/
}

#menu_icon.open {
	transform: rotate(90deg);
}

#menu_icon div {
	margin-top: 15%;
	margin-left: 15%;
	width: 30px;
	height: 30px;
}

#menu {
	cursor: pointer;
	visibility: hidden;
	position: absolute;
	box-sizing: border-box;
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
	cursor: pointer;
	left: -2px;
	height: 101%;
	background: rgba(0,40,120,0.4);
	box-shadow: 0px 0px 12px rgba(80,200,255,0.4);
	border: 1px solid rgba(80,140,255,0.4);
	text-align: center;
	line-height: normal;
	/* disable text select */
-webkit-touch-callout: none; /* iOS Safari */
-webkit-user-select: none; /* Safari */
-khtml-user-select: none; /* Konqueror HTML */
-moz-user-select: none; /* Firefox */
-ms-user-select: none; /* Internet Explorer/Edge */
    user-select: none; /* Non-prefixed version, currently supported by Chrome and Opera */
-webkit-transition: width 4s; /* Safari prior 6.1 */
  	transition: width 4s;
}

#menu.open {
	visibility: visible;
	width: 40%;
	-webkit-transition: width 4s; /* Safari prior 6.1 */
  	transition: width 4s;
}

